--- a/app/globals.css
+++ b/app/globals.css
@@ -206,7 +206,7 @@
 }
 
 .search-manufacturer__input {
-  @apply w-full h-[48px] pl-12 p-4 rounded-l-full max-sm:rounded-full bg-light-white outline-none cursor-pointer text-sm;
+  @apply w-full h-[48px] pl-12 p-4 bg-light-white rounded-l-full max-sm:rounded-full outline-none cursor-pointer text-sm;
 }
 
 .search-manufacturer__options {
